[package]
name = "downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["stream"] }
futures-util = "0.3"
indicatif = "0.17"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"